plutus-core/test/type-errors/instType.plc
(program 0.1.0
  { (con integer 0) (con integer) }
)
